<resources>
    <string name="app_name">Dicoding Story</string>
    <string name="email_invalid">Invalid Email Address</string>
    <string name="pass_invalid">Minimum 8 Characters Password</string>
    <string name="file_provider">%1$s.file provider</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="message_welcome_page">Want to learn Android, iOS, Machine Learning, Cloud, Front-End, Back-End, and other IT fields? Come to Dicoding!</string>
    <string name="title_welcome_page">Welcome to Dicoding!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Log Out</string>
    <string name="username">Username</string>
    <string name="date_of_story">Date of Story:</string>
    <string name="description">Description</string>
    <string name="required">Required</string>
    <string name="create_a_new_account">Create a new account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_page">Let\'s create an account by completing the following data</string>
    <string name="success">Success</string>
    <string name="okay">Okay</string>
    <string name="sign_in">Sign In</string>
    <string name="setting">Setting</string>
    <string name="add_story">Add Story</string>
    <string name="refresh">Refresh</string>
    <string name="story_image">Story Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload_story">Upload Story</string>
    <string name="welcome">Welcome to Dicoding Story</string>
    <string name="login_success_message">You have successfully signed in. Can\'t wait to create a wonderful story!</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="message_insert_image">Please insert the image file first</string>
    <string name="default_success_message">Operation successful</string>
    <string name="empty_fields_error">Please fill in all fields</string>
    <string name="signup_failed">Sign up failed. Please try again.</string>
    <string name="success_dialog_title">Success</string>
    <string name="next">Next</string>
    <string name="successfuly_signup_message">You have successfully signed up. Can\'t wait to take the next step!</string>
    <string name="message_providing_data">Start by signing in with your email and password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="image_story">Image Story</string>
    <string name="signup_image">SignUp Image</string>
    <string name="login_image">Login Image</string>
    <string name="retry">Retry</string>
    <string name="detail_story_image">Detail Story Image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="share_loc">Share Location</string>
    <string name="loading">Loading</string>
    <string name="no_media_selected">No media selected</string>
    <string name="location_error">Location error</string>
    <string name="message_no_image_captured">No se capturó ninguna imagen, inténtalo de nuevo.</string>
</resources>
