<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"
        android:title="@string/setting"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_maps"
        android:icon="@drawable/ic_map"
        android:orderInCategory="100"
        android:title="@string/maps"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout_24dp"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="ifRoom|withText" />

</menu>