<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Image Section -->
        <ImageView
            android:id="@+id/iv_story"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/story_image"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_place_holder" />

        <!-- Content Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <!-- User Name -->
            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Description -->
            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="14sp" />

<!--             Date and Label Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity=""
                android:orientation="horizontal">

                <!-- Story Date -->
                <TextView
                    android:id="@+id/tv_story_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_story"
                    android:textColor="@color/gray_dark"
                    android:textSize="12sp" />

<!--                &lt;!&ndash; Label or Icon &ndash;&gt;-->
<!--                <TextView-->
<!--                    android:id="@+id/story_label"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:background="@drawable/label_background"-->
<!--                    android:paddingHorizontal="8dp"-->
<!--                    android:paddingVertical="4dp"-->
<!--                    android:text="@string/new_story"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textSize="12sp"-->
<!--                    android:textStyle="bold" />-->
            </LinearLayout>
            <!-- Progress Bar -->
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:visibility="gone"
                />

            <!-- Error Message -->
            <TextView
                android:id="@+id/error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp"
                android:visibility="gone" />

            <!-- Retry Button -->
            <Button
                android:id="@+id/retry_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="8dp"
                android:text="@string/retry"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
